--- a/css/timeline.css
+++ b/css/timeline.css
@@ -4,7 +4,6 @@
 
 body {
   background-color: #474e5d;
-  font-family: Helvetica, sans-serif;
 }
 
 /* The actual timeline (the vertical ruler) */
@@ -135,6 +134,13 @@ body {
   /* Make all right containers behave like the left ones */
   .right {
     left: 0%;
+  }
+
+  .point {
+    padding: 10px 40px;
+    position: relative;
+    background-color: inherit;
+    width: 100%;
   }
 }
 
